@@ -1,6 +1,7 @@
 == 3.5 ==
 
 * Fixed communication issue when all subscription is selected
+* Fixed user display name and level name issues for ping data
 
 == 3.4.6 ==
 
